--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "cross-env NODE_ENV=test mocha --exit",
+		"test": "cross-env NODE_ENV=test mocha --timeout 5000 --exit",
 		"cover": "nyc --reporter=lcov --reporter=text-summary npm test"
 	},
 	"dependencies": {
-		"express": "^4.16.2",
+		"express": "^4.16.3",
 		"mongoose": "^5.0.11",
 		"morgan": "^1.9.0"
 	},
